# api/docs/swagger.json
@@ -2792,7 +2792,18 @@
             }
         },
         "handler.RunRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "lang": {
+                    "type": "string"
+                },
+                "question_id": {
+                    "type": "string"
+                }
+            }
         },
         "model.CreateQuestionInputWithOutputRequest": {
             "type": "object",
