# api/handler/cheack.go
@@ -11,19 +11,10 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// InputOutput - I/O ma'lumotlari uchun tuzilma
-type InputOutput struct {
-    In  string      `json:"in"`
-    Out interface{} `json:"out" swaggertype:"object" example:"string or int"` // Bu yerda interfeys uchun sharh beramiz
-}
-
-// RunRequest - Kodni tekshirish uchun so'rov tuzilmasi
 type RunRequest struct {
-	Code        string        `json:"code"`        // Kod
-	Lang        string        `json:"lang"`        // Dasturlash tili
-	TimeLimit   int32         `json:"timeLimit"`   // Vaqt cheklovi
-	MemoryLimit int64         `json:"memoryLimit"` // Xotira cheklovi
-	IO          []InputOutput `json:"io"`          // I/O ma'lumotlari
+	QuestionId  string        `json:"question_id"` 
+	Code        string        `json:"code"`        
+	Lang        string        `json:"lang"`   
 }
 
 // ProxyChecker - Kodni tekshirish uchun API
@@ -40,13 +31,11 @@ type RunRequest struct {
 func (h *Handler) ProxyChecker(c *gin.Context) {
 	var req RunRequest
 
-	// Clientdan request ma'lumotlarni olish
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, model.Error{Message: "Invalid request"})
 		return
 	}
 
-	// Checker service'ga request yuborish
 	requestBody, err := json.Marshal(req)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, model.Error{Message: "Failed to encode request body"})
